# NewsAggregator

./: .gitignore  1.txt  123.txt  BACKEND_DESIGN,md  DB_SCHEMA.md  FRONTEND_SPEC.md  README.md  nginx_deploy.md
backend/: Cargo.toml
backend/src/: app.rs  auth.rs  config.rs  error.rs  main.rs
backend/src/api/: admin.rs  alerts.rs  articles.rs  config.rs  feeds.rs  health.rs  mod.rs  settings.rs
backend/src/fetcher/: mod.rs
backend/src/middleware/: mod.rs
backend/src/model/: mod.rs
backend/src/ops/: events.rs
backend/src/repo/: article_sources.rs  articles.rs  events.rs  feeds.rs  maintenance.rs  migrations.rs  mod.rs  settings.rs
backend/src/service/: articles.rs  feeds.rs  mod.rs  settings.rs
backend/src/util/: baidu.rs  deepseek.rs  html.rs  mod.rs  ollama.rs  qdrant.rs  title.rs  translator.rs  url_norm.rs
config/: config.example.yaml  config.yaml
docs/: admin_access_design.md  backend.md  database.md  frontend.md  google_news_integration.md  news-dedup-plan.md  notification_center_design.md  ollama_translation.md  search_desgin.md  taxonomy.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx  routes.tsx
frontend/src/lib/: api.ts  domain.ts  time.ts
frontend/src/pages/Admin/: index.tsx
frontend/src/pages/Featured/: index.tsx
frontend/src/pages/Feeds/: FeedFormModal.tsx  FeedTable.tsx  index.tsx
frontend/src/styles/: globals.css
frontend/src/types/: api.ts
nginx/: config.sh  deploy.sh  nginx_deploy.md
(+5 files in other folders)
