[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
thiserror = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.5"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
feed-rs = "1"
httpdate = "1"
tracing-appender = "0.2"
url = "2"
uuid = { version = "1", features = ["v4"] }
